Harden JDK launch handoff and external javaws process spawning.
Make native vs bare-java launcher paths explicit, strengthen JDK version matching and relaunch handoff, cache JNLP parses, and cover the changes with unit tests.